{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 51,
  "lineage": "2f314156-2c68-4273-f71d-d0f43e6550b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vprofileapp_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eeca1225b745d958",
            "arn": "arn:aws:ec2:ap-south-1:851481789693:instance/i-0c84ef68dafa61bf0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c84ef68dafa61bf0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05696a5b227562f9b",
            "private_dns": "ip-10-0-1-81.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.81",
            "public_dns": "ec2-13-127-199-118.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.199.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0680fe9fd56cd596d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0916d5521ea14d077",
            "tags": {
              "Name": "VprofileApp_Prod"
            },
            "tags_all": {
              "Name": "VprofileApp_Prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0714ea1e9decb0e04"
            ]
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851481789693:internet-gateway/igw-05fee1a28176c6d8b",
            "id": "igw-05fee1a28176c6d8b",
            "owner_id": "851481789693",
            "tags": {
              "Name": "VProfile-App-Igw"
            },
            "tags_all": {
              "Name": "VProfile-App-Igw"
            },
            "vpc_id": "vpc-053e74084434c06cd"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "vprofile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:851481789693:loadbalancer/app/vprofile-alb/68dd9b9235172324",
            "arn_suffix": "app/vprofile-alb/68dd9b9235172324",
            "desync_mitigation_mode": "defensive",
            "dns_name": "vprofile-alb-1408059392.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:851481789693:loadbalancer/app/vprofile-alb/68dd9b9235172324",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vprofile-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0714ea1e9decb0e04"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0916d5521ea14d077"
              },
              {
                "subnet_id": "subnet-0c953edf95f0fd483"
              }
            ],
            "subnets": [
              "subnet-0916d5521ea14d077",
              "subnet-0c953edf95f0fd483"
            ],
            "vpc_id": "vpc-053e74084434c06cd",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "vprofile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:851481789693:listener/app/vprofile-alb/68dd9b9235172324/ae50c0bbd240a5c5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:851481789693:targetgroup/vprofile-target-group/6389145462ad47ab",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:851481789693:listener/app/vprofile-alb/68dd9b9235172324/ae50c0bbd240a5c5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:851481789693:loadbalancer/app/vprofile-alb/68dd9b9235172324",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.vprofile",
            "aws_lb_target_group.vprofile",
            "aws_security_group.public_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "vprofile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:851481789693:targetgroup/vprofile-target-group/6389145462ad47ab",
            "arn_suffix": "targetgroup/vprofile-target-group/6389145462ad47ab",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:851481789693:targetgroup/vprofile-target-group/6389145462ad47ab",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "vprofile-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-053e74084434c06cd"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "vprofile",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:851481789693:targetgroup/vprofile-target-group/6389145462ad47ab-20230717065334308100000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:851481789693:targetgroup/vprofile-target-group/6389145462ad47ab",
            "target_id": "i-0c84ef68dafa61bf0"
          },
          "dependencies": [
            "aws_instance.vprofileapp_instance",
            "aws_lb_target_group.vprofile",
            "aws_security_group.public_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851481789693:route-table/rtb-0c49ec19b40502212",
            "id": "rtb-0c49ec19b40502212",
            "owner_id": "851481789693",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05fee1a28176c6d8b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VProfile-App-RouteTable"
            },
            "tags_all": {
              "Name": "VProfile-App-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-053e74084434c06cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6e0071498c9ad57",
            "route_table_id": "rtb-0c49ec19b40502212",
            "subnet_id": "subnet-0916d5521ea14d077"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vprofileapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c5de5e65a569223",
            "route_table_id": "rtb-0c49ec19b40502212",
            "subnet_id": "subnet-0c953edf95f0fd483"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851481789693:security-group/sg-0c8e05907a7308d02",
            "description": "Security group for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8e05907a7308d02",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Vprofile-PrivateSecurityGroup",
            "name_prefix": "",
            "owner_id": "851481789693",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Vprofile-PrivateSecurityGroup"
            },
            "tags_all": {
              "Name": "Vprofile-PrivateSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-053e74084434c06cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851481789693:security-group/sg-0714ea1e9decb0e04",
            "description": "Security group for public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0714ea1e9decb0e04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Vprofile-PublicSecurityGroup",
            "name_prefix": "",
            "owner_id": "851481789693",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Vprofile-PublicSecurityGroup"
            },
            "tags_all": {
              "Name": "Vprofile-PublicSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-053e74084434c06cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851481789693:subnet/subnet-02793bf2b49b1cde4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02793bf2b49b1cde4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851481789693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VProfileApp-PrivateSubnet-0"
            },
            "tags_all": {
              "Name": "VProfileApp-PrivateSubnet-0"
            },
            "vpc_id": "vpc-053e74084434c06cd"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851481789693:subnet/subnet-0548946ee57803ee1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0548946ee57803ee1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851481789693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VProfileApp-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "VProfileApp-PrivateSubnet-1"
            },
            "vpc_id": "vpc-053e74084434c06cd"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851481789693:subnet/subnet-0916d5521ea14d077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0916d5521ea14d077",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851481789693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VprofileApp-PublicSubnet-0"
            },
            "tags_all": {
              "Name": "VprofileApp-PublicSubnet-0"
            },
            "vpc_id": "vpc-053e74084434c06cd"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851481789693:subnet/subnet-0c953edf95f0fd483",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c953edf95f0fd483",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851481789693",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VprofileApp-PublicSubnet-1"
            },
            "tags_all": {
              "Name": "VprofileApp-PublicSubnet-1"
            },
            "vpc_id": "vpc-053e74084434c06cd"
          },
          "dependencies": [
            "aws_vpc.vprofileapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vprofileapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851481789693:vpc/vpc-053e74084434c06cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a7605d869ce3741",
            "default_route_table_id": "rtb-03dedaecf023599b0",
            "default_security_group_id": "sg-0865ac006fb8004ec",
            "dhcp_options_id": "dopt-070ecc5273b9f0c1a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-053e74084434c06cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03dedaecf023599b0",
            "owner_id": "851481789693",
            "tags": {
              "Name": "VProfile-App-Vpc"
            },
            "tags_all": {
              "Name": "VProfile-App-Vpc"
            }
          }
        }
      ]
    }
  ]
}